--- a/src/pages/ArtworkDetails/ArtworkDetails.scss
+++ b/src/pages/ArtworkDetails/ArtworkDetails.scss
@@ -1,15 +1,34 @@
 .artworkDetails {
   display: flex;
+  flex-wrap: wrap;
   border-top: 1px solid #e9e9e9;
+  border-bottom: 1px solid #e9e9e9;
   &--left {
     &--content {
     }
-    margin-top: 20px;
-    margin-left: 20px;
-    width: 75%;
+    width: 70%;
   }
 
   &--right {
-    flex-grow: 1;
+    width: 25%;
+  }
+}
+
+@media only screen and (max-width: 1060px) {
+  .artworkDetails {
+    &--left {
+      &--content {
+      }
+      width: 100%;
+    }
+
+    &--right {
+      width: 100%;
+    }
+  }
+}
+@media only screen and (max-width: 550px) {
+  .artworkDetails {
+    flex-direction: column-reverse;
   }
 }
