--- a/src/pages/creator/creator-product/CreatorProduct.scss
+++ b/src/pages/creator/creator-product/CreatorProduct.scss
@@ -5,3 +5,18 @@
     // display: none;
   }
 }
+
+.creator-profilee {
+  height: 40vh;
+  &__img {
+    .ant-image {
+      width: 100px;
+      height: 100px;
+      img {
+        width: 100%;
+        height: fit-content;
+        object-fit: cover;
+      }
+    }
+  }
+}
