done page editProfile Creator

--- a/src/pages/creator/creator-profile/CreatorProfile.scss
+++ b/src/pages/creator/creator-profile/CreatorProfile.scss
@@ -8,6 +8,9 @@
   margin: 0 auto;
   padding-bottom: 40px;
   margin-bottom: 20px;
+  &__editprofile {
+    // background-color: red;
+  }
   &__info {
     // display: flex;
     // align-items: center;
