fix class config signUp

--- a/src/pages/creator/edit-profile/EditProfile.scss
+++ b/src/pages/creator/edit-profile/EditProfile.scss
@@ -5,30 +5,6 @@
   }
 }
 
-.ant-drawer {
-  &-header {
-    background-color: rgb(32, 32, 32) !important;
-    > * {
-      color: white !important;
-    }
-  }
-  &-close {
-    color: white !important;
-  }
-  &-title {
-    color: white !important;
-  }
-  &-content-wrapper {
-    width: 400px !important;
-    .acss-1g5mw59 {
-      border-top-left-radius: 10px;
-      border-bottom-left-radius: 10px;
-      background-color: transparent !important;
-      border: none;
-      box-shadow: rgb(91 91 91 / 82%) -7px 4px 12px 3px;
-    }
-  }
-}
 .ChangeProfileInfo {
   .ant-col {
     text-align: start;
@@ -73,6 +49,31 @@
       .wrapUpload {
         margin: 0;
       }
+    }
+  }
+}
+
+.PopUpRight {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  background-color: transparent !important;
+  border: none !important;
+  box-shadow: rgb(91 91 91 / 82%) -7px 4px 12px 3px;
+  .ant-drawer {
+    &-header {
+      background-color: rgb(32, 32, 32) !important;
+      > * {
+        color: white !important;
+      }
+    }
+    &-close {
+      color: white !important;
+    }
+    &-title {
+      color: white !important;
+    }
+    &-content-wrapper {
+      width: 400px !important;
     }
   }
 }
