--- a/src/pages/signUp/SignUp.scss
+++ b/src/pages/signUp/SignUp.scss
@@ -1,9 +1,9 @@
 .signUp {
-  overflow-y: hidden;
+  // overflow-y: hidden;
   display: flex;
   height: 100vh;
   &__side-bar {
-    height: 100vh;
+    height: 110vh;
     &__media {
       width: 100%;
       height: 100%;
@@ -12,57 +12,59 @@
   }
 
   &__form {
-    height: 100vh;
+    width: 100%;
+    height: 110vh;
     display: flex;
     justify-content: center;
     align-items: center;
     &__container {
       h3 {
         font-family: "BoldMonaSans";
-        font-size: 1.7em;
-        margin-bottom: 2em;
+        font-size: 1.8em;
+        margin-bottom: 1.5em;
       }
-      &__gg-btn {
+
+      &__submit {
         width: 100%;
         border-radius: 100px;
         display: flex;
         justify-content: center;
         align-items: center;
+        background-color: #0d0c22;
+        color: white;
         font-family: "SemiBoldMonaSans";
         padding: 27px;
         border: 1.8px solid rgb(231, 231, 231);
-        background-color: #0d0c22;
-        color: white;
-        img {
-          height: 1.1em;
-          padding-right: 10px;
-        }
+        margin: 0.5em 0;
       }
-      &__namepass {
-        margin-bottom: 2em;
-        &__group-form {
-          &__label {
-            font-family: "BoldMonaSans";
-            font-size: 1.1em;
-          }
-          &__input {
-            margin-top: 0.5em;
-            height: 4em !important;
-          }
+
+      &__group-form {
+        &__label {
+          font-family: "BoldMonaSans";
+          font-size: 1em;
+          // margin-top: 0.5em;
         }
-        &__submit {
+        &__input {
+          margin-top: 0.5em;
+          height: 3em !important;
+        }
+        &__role {
           width: 100%;
-          border-radius: 100px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          background-color: white;
-          color: #0d0c22;
-          font-family: "SemiBoldMonaSans";
-          padding: 27px;
-          border: 1.8px solid rgb(231, 231, 231);
+          &__option {
+            &__detail {
+              height: 3.2em;
+              width: 17vw;
+              margin-bottom: 0.5em;
+              text-align: center;
+              padding: 0.5em;
+              color: #0d0c22;
+              font-family: "SemiBoldMonaSans";
+              border: 0.5px solid rgba(0, 0, 0, 0.265) !important;
+            }
+          }
         }
       }
+
       &__linkToSignUp,
       &__about {
         font-weight: 500;
@@ -87,78 +89,6 @@
   }
 }
 
-.sign-up-form {
-  width: 90%;
-  &__form {
-    &__container {
-      margin-left: 5em;
-      width: 90%;
-    }
-  }
-  &__group-form {
-    &__flex {
-      width: 80%;
-      &__label {
-        font-weight: 500;
-      }
-      &__input {
-        height: 4em !important;
-        border-radius: 10px;
-        margin: 0.5em 0;
-      }
-    }
-    &__role {
-      width: 80%;
-      &__label {
-        font-weight: 500;
-        margin-right: 1em;
-      }
-      &__input {
-        height: 4em !important;
-        border-radius: 10px;
-        margin: 0.5em 0;
-      }
-      &__option {
-        &__detail {
-          height: 3.5em;
-          width: 22vw;
-          margin: 0.5em 0;
-          text-align: center;
-          padding: 0.5em;
-          color: #0d0c22;
-          font-family: "SemiBoldMonaSans";
-          border: 0.5px solid rgba(0, 0, 0, 0.265) !important;
-        }
-      }
-    }
-
-    &__base {
-      width: 80%;
-      &__label {
-        font-weight: 500;
-      }
-      &__input {
-        height: 4em !important;
-        border-radius: 10px;
-        margin: 0.5em 0;
-      }
-    }
-  }
-  &__submit-create {
-    width: 83%;
-    border-radius: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #0d0c22;
-    color: white;
-    font-family: "SemiBoldMonaSans";
-    padding: 26px;
-    border: 1.8px solid rgb(231, 231, 231);
-    margin: 1em 0;
-  }
-}
-
 @media only screen and (max-width: 990px) {
   .signUp {
     &__side-bar {
@@ -169,6 +99,21 @@
       position: absolute;
       top: 1%;
       width: 100%;
+      &__container {
+        h3 {
+          margin-left: 2.5em;
+        }
+        &__group-form {
+          &__role {
+            width: 100%;
+            &__option {
+              &__detail {
+                width: 22vw;
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
@@ -179,20 +124,6 @@
       padding: 0 2em;
     }
   }
-  .sign-up-form {
-    &__form {
-      &__container {
-        margin-left: 2.5em;
-      }
-    }
-    &__role {
-      &__option {
-        &__detail {
-          height: 2em !important;
-        }
-      }
-    }
-  }
 }
 
 @media only screen and (max-width: 480px) {
@@ -200,6 +131,7 @@
     &__form {
       &__container {
         margin-left: 2em;
+       
       }
     }
   }
