--- a/src/pages/dashboard/layout/side-nav/SideNav.scss
+++ b/src/pages/dashboard/layout/side-nav/SideNav.scss
@@ -16,7 +16,7 @@
   .ant-menu-item,
   .ant-menu-submenu,
   .ant-menu-sub {
-    font-family: "BookCereal";
+    font-family: "MediumCereal";
     color: white;
     background-color: #1f1f1f !important;
 
