--- a/src/component/roomMessage/RoomMessage.scss
+++ b/src/component/roomMessage/RoomMessage.scss
@@ -50,4 +50,14 @@
       }
     }
 
-  
+@media only  screen and (max-width: 800px){
+  .item {
+    &__detail {
+      width: 75%;
+      span {
+
+      }
+    }
+  }
+
+}
