--- a/src/pages/signUp/SignUp.scss
+++ b/src/pages/signUp/SignUp.scss
@@ -1,5 +1,6 @@
 .signUp {
   // overflow-y: hidden;
+
   width: 100%;
   display: flex;
   height: 100vh;
@@ -51,6 +52,9 @@
         &__input {
           // margin-top: 0.5em;
           height: 3em !important;
+          .ant-form-item-control-input{
+            display: none;
+          }
         }
         &__role {
           width: 100%;
@@ -129,7 +133,6 @@
     }
   }
 }
-
 @media only screen and (max-width: 480px) {
   .sign-up-form {
     &__form {
