--- a/src/pages/signUp/SignUp.scss
+++ b/src/pages/signUp/SignUp.scss
@@ -30,7 +30,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: #0d0c22;
+        background-color: #0d0c22 !important;
         color: white;
         font-family: "SemiBoldMonaSans";
         padding: 27px;
@@ -131,7 +131,6 @@
     &__form {
       &__container {
         margin-left: 2em;
-       
       }
     }
   }
