--- a/src/component/notification/Notification.scss
+++ b/src/component/notification/Notification.scss
@@ -1,7 +1,7 @@
 .pop-noti {
   &__noti-btn {
     height: min-content !important;
-    padding: 10px 15px;
+    padding: 3px 15px 15px 15px;
     border-radius: 100%;
     background-color: transparent;
     border: 1px solid rgba(255, 255, 255, 0.489);
