--- a/src/pages/creator/CreatorPage.module.scss
+++ b/src/pages/creator/CreatorPage.module.scss
@@ -17,3 +17,9 @@
   display: flex;
   height: 86vh;
 }
+
+@media only screen and (max-width: 1467px) {
+  .contentStyle {
+    overflow-y: inherit;
+  }
+}
