--- a/src/component/layout-creator/LayoutLeft.scss
+++ b/src/component/layout-creator/LayoutLeft.scss
@@ -1,5 +1,9 @@
 .layoutLeft {
-  background-color: rgb(50, 50, 52);
+  background: linear-gradient(
+    0deg,
+    rgb(52, 52, 52) 0%,
+    rgba(29, 30, 32, 1) 100%
+  );
   height: 100vh;
   width: 80px;
   display: flex;
@@ -9,16 +13,15 @@
   &--img {
     margin-top: 25px;
     width: 50px;
-    width: 50px;
   }
   &--menu {
     // width: 100%;
     height: 100%;
     cursor: pointer;
-    margin-top: 50px;
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 30px;
     align-items: center;
     width: 100%;
     > * {
@@ -33,7 +36,7 @@
     }
     &__addArtwork {
       svg {
-        font-size: 32px;
+        font-size: 28px;
       }
     }
     &__avt {
@@ -45,9 +48,10 @@
       }
     }
   }
-  &--setting {
+  &--setting,
+  &--logout {
     color: white;
-    font-size: 30px;
+    font-size: 25px;
     align-items: flex-end;
     margin-bottom: 30px;
     cursor: pointer;
@@ -87,7 +91,8 @@
     &--img {
       display: none;
     }
-    &--setting {
+    &--setting,
+    &--logout {
       display: none;
     }
   }
