--- a/src/component/requestOrderList/RequestOrderList.scss
+++ b/src/component/requestOrderList/RequestOrderList.scss
@@ -3,7 +3,7 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  border-right: 1px solid #eee;
+  border-right: 1px solid #e9e9e9;
   padding: 25px 0px;
 
   &__title {
