--- a/src/pages/jobsPage/JobsPage.scss
+++ b/src/pages/jobsPage/JobsPage.scss
@@ -67,6 +67,7 @@
       margin-top: 2em;
       height: 3.5em;
       border: 1.8px solid rgb(243, 242, 242);
+      border-radius: 10px;
     }
   }
   &__new-opportunities {
