fix-request-order

--- a/src/component/requestOrderDetail/RequestOrderDetail.scss
+++ b/src/component/requestOrderDetail/RequestOrderDetail.scss
@@ -150,6 +150,14 @@
   display: block;
 }
 
+.ant-modal {
+  form {
+    label {
+      font-family: "MediumCereal" !important;
+    }
+  }
+}
+
 @media only screen and (max-width: 1353px) {
   .request-order-detail {
     &__upload-demo {
