--- a/src/component/requestOrderTab/RequestOrderTab.scss
+++ b/src/component/requestOrderTab/RequestOrderTab.scss
@@ -6,15 +6,22 @@
   &__head {
     font-family: "BoldCereal";
     font-size: 0.95em;
-
+    margin-bottom: 1em;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     &__title {
       width: 65%;
       text-wrap: nowrap;
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
+    }
+    &__time {
+      font-family: "MediumCereal";
+      text-wrap: nowrap;
+      color: gray;
+      font-size: 0.8em;
     }
   }
   &__content {
