--- a/src/component/formRequest/FormRequest.scss
+++ b/src/component/formRequest/FormRequest.scss
@@ -36,7 +36,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: black;
+        background-color: black !important;
         color: white;
         text-decoration: none;
         height: 3em;
