--- a/src/component/header/Header.scss
+++ b/src/component/header/Header.scss
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 30;
 }
 
 @media only screen and (max-width: 2000px) {
