--- a/src/pages/addArtWork/FormArtWork.scss
+++ b/src/pages/addArtWork/FormArtWork.scss
@@ -9,7 +9,11 @@
   background-position: center center;
   flex-direction: row-reverse;
   width: 100%;
+  label {
+    font-family: "MediumCereal";
+  }
   h3 {
+    font-family: "BoldCereal";
     text-align: center;
     font-size: 20px;
   }
@@ -17,6 +21,18 @@
     border-radius: 40px;
     padding: 20px;
     // width: 100%;
+    .ant-switch {
+      background-color: #e3e3e3;
+      margin-right: 0.5em;
+    }
+    .ant-switch.ant-switch-checked {
+      background-color: rgb(255, 208, 241);
+    }
+    h5 {
+      display: inline-block;
+      font-family: "MediumCereal";
+      color: rgb(167, 165, 165);
+    }
   }
   &--image {
     width: 40%;
@@ -28,7 +44,16 @@
         object-fit: cover;
       }
     }
-    
+    &__remain-posts {
+      margin-bottom: 1em;
+      width: fit-content;
+      border: 2px solid rgb(232, 212, 255);
+      background-color: rgb(201, 166, 208);
+      color: rgb(255, 255, 255);
+      padding: 0.7em 1em;
+      font-family: "BoldCereal";
+      border-radius: 100px;
+    }
   }
   label.ant-form-item-required {
     color: #afadad !important;
@@ -40,12 +65,16 @@
   }
 }
 
-
 @media only screen and (max-width: 800px) {
   .FormArtWork {
+    padding: 2em 0;
     flex-direction: column-reverse;
-
+    align-items: center;
     &--image {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
       .ant-image {
         display: none;
       }
@@ -63,6 +92,7 @@
     &--image {
       width: 100%;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
     }
