--- a/src/component/uploadDemo/UploadDemo.scss
+++ b/src/component/uploadDemo/UploadDemo.scss
@@ -1,4 +1,5 @@
 .demo-uploader {
+  margin-right: 2.5em;
   width: auto !important;
   .ant-upload.ant-upload-select {
     background-color: #f1d4ef3e !important;
