--- a/src/component/requestOrderDetail/RequestOrderDetail.scss
+++ b/src/component/requestOrderDetail/RequestOrderDetail.scss
@@ -1,7 +1,6 @@
 .request-order-detail {
   flex-grow: 1;
   height: 100vh;
-  overflow-y: scroll;
 
   &__head {
     padding: 5em 2em 1em 2em;
@@ -109,7 +108,6 @@
   }
   &__upload-demo {
     margin: 0 2em;
-    margin-bottom: 5em;
     &__content {
       margin-bottom: 2em;
       h3 {
@@ -123,8 +121,16 @@
     &__upload {
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-between;
+      align-items: center;
+      justify-content: last baseline;
       width: 100%;
+      img {
+        border-radius: 10px;
+        flex: 0 0 12em;
+        height: 12em;
+        width: 12em;
+        object-fit: cover;
+      }
     }
   }
   &__demo {
@@ -133,7 +139,8 @@
     &__upload {
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-between;
+      align-items: center;
+      justify-content: last baseline;
       width: 100%;
       img {
         margin: 2em 0;
