--- a/src/component/requestOrderDetail/RequestOrderDetail.scss
+++ b/src/component/requestOrderDetail/RequestOrderDetail.scss
@@ -3,7 +3,8 @@
   height: 100vh;
 
   &__head {
-    padding: 5em 2em 1em 2em;
+    z-index: 5;
+    padding: 2em 2em 1em 2em;
     display: flex;
     justify-content: space-between;
     font-family: "BoldCereal";
@@ -107,7 +108,6 @@
     }
   }
   &__upload-demo {
-    margin: 0 2em;
     &__content {
       margin-bottom: 2em;
       h3 {
