--- a/src/component/ListFeedback/ListFeedback.scss
+++ b/src/component/ListFeedback/ListFeedback.scss
@@ -166,6 +166,15 @@
   }
 }
 
+.edit-artwork-popup {
+  display: flex;
+  flex-direction: column;
+  button {
+    font-family: "MediumCereal";
+    border: none;
+  }
+}
+
 @media only screen and (max-width: 550px) {
   .listFeedback {
     height: fit-content;
