--- a/src/component/jobsview/JobsView.scss
+++ b/src/component/jobsview/JobsView.scss
@@ -40,6 +40,7 @@
       margin-top: 1em;
       font-family: "RegularMonaSans";
       line-height: 1.5em;
+      text-wrap: wrap;
     }
     &__tag {
       width: fit-content;
