--- a/src/component/signInUp/SignInUp.scss
+++ b/src/component/signInUp/SignInUp.scss
@@ -49,7 +49,9 @@
 .switch-account {
   display: flex;
   align-items: center;
-  padding: 2px 7px;
+
+  padding-top: 5px !important;
+  padding: 5px 7px;
   border-radius: 10px;
   cursor: pointer;
   h3 {
