--- a/src/sections/orderHistory/OrderHistory.scss
+++ b/src/sections/orderHistory/OrderHistory.scss
@@ -1,6 +1,23 @@
-.order-history {
+.order-audience {
   width: 80%;
   margin: 0 10%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  &__select-order {
+    color: white;
+    outline: none;
+    border-radius: 5px;
+    padding: 5px;
+    font-family: "MediumCereal";
+    option {
+      color: black;
+      background-color: white;
+    }
+  }
+}
+
+.order-history {
   h1 {
     font-family: "BlackCereal";
     font-size: 2em;
