--- a/src/component/jobsview/JobsView.scss
+++ b/src/component/jobsview/JobsView.scss
@@ -41,6 +41,7 @@
       font-family: "RegularMonaSans";
       line-height: 1.5em;
       text-wrap: wrap;
+      word-wrap: break-word;
     }
     &__tag {
       width: fit-content;
