--- a/src/component/jobsview/JobsView.scss
+++ b/src/component/jobsview/JobsView.scss
@@ -14,8 +14,10 @@
       margin-top: 1em;
       display: flex;
       img {
-        width: 7%;
-        height: 7%;
+        // width: 7%;
+        // height: 7%;
+        width: 3em;
+        height: 3em;
         border-radius: 100px;
         margin-right: 1.5em;
       }
