--- a/src/component/roomChatDetail/RoomChatDetail.scss
+++ b/src/component/roomChatDetail/RoomChatDetail.scss
@@ -77,7 +77,7 @@
     display: flex;
     justify-content: center;
     padding: 5px 15px;
-    textarea {
+    input {
       //   background-color: #2b2c32 !important;
       border: none;
       outline: none;
@@ -104,14 +104,13 @@
   }
 }
 
-@media only  screen and (max-width: 800px){
+@media only screen and (max-width: 800px) {
   .chat-detail {
     &__header {
       padding-left: 5px;
-      &__back{
+      &__back {
         display: block;
       }
     }
-
   }
 }
