add-rule-input-changePassword_add-img-audience

--- a/src/pages/login/Login.scss
+++ b/src/pages/login/Login.scss
@@ -142,6 +142,9 @@ label.ant-form-item-required {
   .login {
     &__form {
       &__container {
+        &__gg-btn {
+          color:white;
+        }
         &__linkToSignUp {
           font-size: 1em;
         }
