--- a/src/component/ListFeedback/ListFeedback.scss
+++ b/src/component/ListFeedback/ListFeedback.scss
@@ -73,9 +73,9 @@
       // border-right: 1px solid red;
     }
     &__like {
-      path {
-        color: red;
-      }
+      // path {
+      //   color: red;
+      // }
     }
   }
   &--comments {
@@ -116,6 +116,14 @@
     &__detail {
       margin: 13px 20px !important;
       border-bottom: 1px solid #e9e9e9;
+      img{
+        width: 40px !important;
+        z-index: 999999;
+        object-fit: cover;
+      }
+      .item__detail{
+        width: 80% !important;
+      }
     }
   }
   &--input {
