--- a/src/pages/addArtWork/FormArtWork.scss
+++ b/src/pages/addArtWork/FormArtWork.scss
@@ -7,7 +7,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  flex-direction: row-reverse;
+  // flex-direction: row-reverse;
   width: 100%;
   label {
     font-family: "MediumCereal";
