--- a/src/component/infoCard/InfoCard.scss
+++ b/src/component/infoCard/InfoCard.scss
@@ -33,6 +33,8 @@
       height: 100%;
       img {
         height: 100%;
+        padding: 7px;
+        object-fit: cover;
         border-radius: 35px;
       }
     }
