--- a/src/component/ListFeedback/ListFeedback.scss
+++ b/src/component/ListFeedback/ListFeedback.scss
@@ -116,12 +116,12 @@
     &__detail {
       margin: 13px 20px !important;
       border-bottom: 1px solid #e9e9e9;
-      img{
+      img {
         width: 40px !important;
         z-index: 999999;
         object-fit: cover;
       }
-      .item__detail{
+      .item__detail {
         width: 80% !important;
       }
     }
@@ -129,13 +129,14 @@
   &--input {
     display: flex;
     align-items: center;
-    margin: 20px;
+    margin: 0 20px;
     gap: 20px;
     // justify-content: center;
     img {
-      width: 30px;
-      height: 30px;
+      width: 40px;
+      height: 35px;
       border-radius: 50%;
+      object-fit: cover;
     }
     &_wrap {
       display: flex;
